tests/baselines/reference/downlevelLetConst17.errors.txt
tests/cases/compiler/downlevelLetConst17.ts(66,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/compiler/downlevelLetConst17.ts (1 errors) ====
    'use strict'
    
    declare function use(a: any);
    
    var x;
    for (let x = 10; ;) {
        use(x);
    }
    use(x);
    
    for (const x = 10; ;) {
        use(x);
    }
    
    for (; ;) {
        let x = 10;
        use(x);
        x = 1;
    }
    
    for (; ;) {
        const x = 10;
        use(x);
    }
    
    for (let x; ;) {
        use(x);
        x = 1;
    }
    
    for (; ;) {
        let x;
        use(x);
        x = 1;
    }
    
    while (true) {
        let x;
        use(x);
    }
    
    while (true) {
        const x = true;
        use(x);
    }
    
    do {
        let x;
        use(x);
    } while (true);
    
    do {
        let x;
        use(x);
    } while (true);
    
    for (let x in []) {
        use(x);
    }
    
    for (const x in []) {
        use(x);
    }
    
    // TODO: update once for-of statements are supported downlevel
    for (const x of []) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
        use(x);
    }